tests/ui/control_handling_reintroduction.rs
fn main() {
    let _ = hibana::integration::cap::ControlHandling::Canonical;
}
